# bookAPI

./: .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  Makefile  README.md  docker-compose.yml  main.tf  outputs.tf  variables.tf
api/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml  setup.cfg
api/books/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
api/kaed/: manage.py  settings.py  urls.py
api/kaed/books/: serializers.py  tests.py  urls.py  views.py
api/kaed/books/migrations/: 0001_initial.py
api/kaed/kaed/: asgi.py  settings.py  wsgi.py
nginx/: nginx.conf
terraform/: .terraform.lock.hcl  dev.auto.tfvars  install-docker.tpl  main.tf  variables.tf
